name: ExpReg
version: 0.0.1
cabal-version: >= 1.10.2
build-type: Simple
licence: 
licence-file: Licence
copyright: Copyright: (c) 2012 - Juan Francisco Cardona McCormick
author: Juan Francisco Cardona McCormick
description: A simple implementation of ExpReg for formal languages course
category: Compiler
 